<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/app_title"
                android:background="@color/disabled"
                android:textColor="@color/white"
                android:text="@string/app_title"
                android:textSize="40sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ListView
                android:id="@+id/paired_list"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:dividerHeight="1dp"
                android:divider="@color/disabled"/>

            <TextView
                android:id="@+id/new_title"
                android:background="@color/disabled"
                android:textColor="@color/white"
                android:text="@string/new_title"
                android:textSize="40sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ListView
                android:id="@+id/new_list"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:dividerHeight="1dp"
                android:divider="@color/disabled"/>

            <Button
                android:id="@+id/scan_button"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:textSize="30sp"
                android:textColor="@color/white"
                app:cornerRadius = "0dp"
                android:backgroundTint="@color/disabled"
                android:text="@string/scan_devices"/>

            <TextView
                android:id="@+id/mac_display"
                android:background="@color/output"
                android:textColor="@color/white"
                android:text="@string/my_mac_prefix"
                android:textSize="25sp"
                android:textAlignment="textStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/visibility_button"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="25sp"
                android:textColor="@color/white"
                app:cornerRadius = "0dp"
                android:backgroundTint="@color/disabled"
                android:text="@string/visibility_devices"/>

            <TextView
                android:id="@+id/text_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/output"
                android:textColor="@color/white"
                android:text="@string/log_prefix"
                android:textSize="20sp"/>

        </LinearLayout>

</ScrollView>